--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/mastrielIcon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>mastriel's website!</title>
   </head>
   <body>
+    <noscript>Unfortunately, this site requires javascript to function.</noscript>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
